# ComfyUI-Slack

./: .comfyignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
js/: slack_disable_channel_on_thread.js  slack_hide_listener_fields.js  slack_save_output.js
nodes/: slack_send_audio.py  slack_send_image.py  slack_send_text.py  slack_send_video.py  slack_thread_start.py
tests/: conftest.py  pytest.ini  test_comfy_trigger.py  test_config.py  test_local_save.py  test_markdown_to_slack.py  test_router.py  test_slack_client.py  test_slack_messages.py  test_slack_resolve.py  test_thread_root.py  test_workflow_registry.py
utils/: comfy_trigger.py  config.py  listener_bootstrap.py  local_save.py  markdown_to_slack.py  router.py  slack_client.py  slack_messages.py  slack_resolve.py  socket_listener.py  thread_root.py  workflow_registry.py
workflows/: img2img.api.json  manifest.json  txt2img.api.json
