[project]
name = "comfyui-slack"
version = "1.2.0"
description = "ComfyUI custom nodes for sending images, videos, text, and audio to Slack, plus an optional Slack-to-ComfyUI workflow trigger."
authors = [{ name = "Claus Steinmassl" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk>=3.21.0",
    "imageio-ffmpeg>=0.4.7",
    "Pillow>=9.0.0",
]

[project.urls]
Repository = "https://github.com/claussteinmassl/ComfyUI-Slack"

[tool.comfy]
PublisherId = "claussteinmassl"
DisplayName = "ComfyUI-Slack"
